# tensorRT_CRNN

./: CMakeLists.txt  README.md  common.hpp  configure.h  crnn_trt.cpp
